# bands

./: .env  .env.example  DEV.md  README.md  deploy.bat  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workfllows/: python_checks.yml
.github/workflows/: frontend_checks.yml  python_checks.yml
bands_backend/: .env.example  .flake  .gitignore  Dockerfile  Makefile  conftest.py  entrypoint.sh  manage.py  pyproject.toml
bands_backend/bands/: apps.py  exception_handler.py  models_extensions.py  urls.py
bands_backend/bands/migrations/: 0001_initial.py  0002_artist_rating.py  0003_alter_metric_category.py  0004_rename_spotify_url_artist_link_url.py
bands_backend/bands/models/: __init__.py  artist.py  metric.py  score.py
bands_backend/bands/serializers/: artist_serializer.py  metric_serializer.py  score_in_artist_serializer.py  score_serializer.py
bands_backend/bands/serializers/requests/: artist_create_request_serializer.py  artist_list_request_serializer.py  artist_update_request_serializer.py  metric_create_request_serializer.py  metric_update_request_serializer.py  score_bulk_upsert_request_serializer.py  score_create_request_serializer.py  score_update_request_serializer.py
bands_backend/bands/views/: artist_view.py  metric_view.py  model_view.py  pagination.py  score_view.py
bands_backend/bands_backend/: asgi.py  settings.py  urls.py  wsgi.py
bands_backend/tests/: settings.py
bands_backend/tests/bands/: data.py
bands_backend/tests/bands/serializers/requests/: test_artist_list_request_serializer.py
bands_backend/tests/bands/views/: conftest.py  test_artist_view.py  test_metric_view.py  test_score_view.py
bands_backend/tests/bands/views/__snapshots__/: test_artist_view.ambr  test_metric_view.ambr  test_score_view.ambr
bands_backend/tests/integration/bands/: data.py
bands_backend/tests/integration/bands/views/: test_artist_view.py  test_case.py  test_metric_view.py  test_score_view.py
bands_backend/tests/unit/bands/serializers/requests/: test_artist_list_request_serializer.py
bands_backend/tests/unit/bands/views/: test_artist_view.py
bands_db/: init.sh
bands_frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
bands_frontend/assets/css/: main.css
bands_frontend/public/: index.html
bands_frontend/src/: App.vue  config.js  config.ts  exceptions.ts  main.js  main.ts  utils.js  utils.ts
bands_frontend/src/components/: DemoBanner.vue  ErrorSnackBar.vue  HeaderBand.vue  HeaderSection.vue  MetricsSelector.vue  SearchSection.vue
bands_frontend/src/components/helpers/: KeyboardEvents.vue
bands_frontend/src/components/icons/: CheckIcon.vue  ChevronDown.vue  ChevronUp.vue  CrossIcon.vue  EditIcon.vue  ExternalLink.vue  LoadingIcon.vue  PlusIcon.vue  SearchIcon.vue  SlidersIcon.vue  StarFilledIcon.vue  StarIcon.vue  SvgIcon.vue
bands_frontend/src/components/list/: ArtistRating.vue  FlagScore.vue  ListElement.vue  ListSection.vue  MainScore.vue  NewListElement.vue  ValueScore.vue
bands_frontend/src/components/metrics/: FlagCheck.vue  FlagLabel.vue  ValueSlider.vue
bands_frontend/src/mixins/: ColorsMixin.vue  WithBandSizeMixin.vue  WithColorMixin.vue
bands_frontend/src/services/API/: ArtistsAPIRepository.js  MetricsAPIRepository.js  ScoresAPIRepository.js  artistsAPIRepository.ts  metricsAPIRepository.ts  scoresAPIRepository.ts
bands_frontend/src/services/repositories/: artists.ts  metrics.ts  scores.ts
bands_frontend/src/services/repositories/API/: artistsAPIRepository.ts  metricsAPIRepository.ts  scoresAPIRepository.ts
bands_frontend/src/services/repositories/demo/: artistsDemoRepository.ts  data.ts  db.ts  metricsDemoRepository.ts  scoresDemoRepository.ts
bands_frontend/src/store/: ArtistsList.js  ArtistsList.ts  Exceptions.js  Metrics.js  PageStatus.js  artistsList.ts  metrics.ts  pageStatus.ts
bands_frontend/src/types/: artist.ts  metrics.ts  score.ts
deployment_utils/: .env.example  README.md  bands.service  docker-compose.yml
