[project]
name = "bands_backend"
version = "0.1.0"
description = ""
authors = [{ name = "Riccardo Campo", email = "riccardocampo@tutanota.com" }]
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
    "django~=5.1",
    "mysqlclient>=2.2.7,<3",
    "python-dotenv>=1.0.1,<2",
    "django-rest-framework>=0.1.0,<0.2",
    "gunicorn>=23.0.0,<24",
    "django-cors-headers>=4.6.0,<5",
    "syrupy>=5.0.0,<6",
    "pytest-django>=4.11.1,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.6.3,<0.7",
    "isort>=5.13.2,<6",
    "mypy>=1.11.2,<2",
    "bandit>=1.7.9,<2",
    "django-stubs>=5.0.4,<6",
    "djangorestframework-stubs>=3.15.0,<4",
    "pytest>=8.3.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.ruff]
cache-dir = ".cache/.ruff"
preview = true
lint.select = ["C", "E", "F", "W", "D"]
lint.ignore = ["D100", "D104", "D200", "D202", "D203", "D212", "D102", "D101", "D106", "D103"]
line-length = 119
exclude = [
    ".linters",
    ".env",
    ".env.example",
    ".gitignore",
    "uv.lock",
    "pyproject.toml",
    "Makefile",
]
target-version = "py313"

[tool.isort]
py_version = 312
skip_glob = "_init__.py"
line_length = 119
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
python_version = 3.13
incremental = true
cache_dir = ".cache/mypy"
color_output = true
pretty = true
show_error_context = true
show_error_codes = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
implicit_reexport = true
plugins = "mypy_django_plugin.main"

[tool.django-stubs]
django_settings_module = "bands_backend.settings"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "conftest.py"]
